--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,6 @@
 .vscode
 __pycache__
 
-/buildings
-/roofs
-/roofs_poly
-/surroundings3D
-/surroundings2D
-/tiles
+/out/*
+/tiles/buildings/*
+/tiles/area/*
